tried/registry/registry-main/yaml/registry-main-harbor-trivy.yml
---
# Source: registry/charts/harbor/templates/trivy/trivy-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: registry-main-harbor-trivy
  labels:
    heritage: Helm
    release: registry-main
    chart: harbor
    app: "harbor"
    component: trivy
spec:
  replicas: 1
  serviceName: registry-main-harbor-trivy
  selector:
    matchLabels:
      release: registry-main
      app: "harbor"
      component: trivy
  template:
    metadata:
      labels:
        heritage: Helm
        release: registry-main
        chart: harbor
        app: "harbor"
        component: trivy
      annotations:
        checksum/secret: de5eb36d4a89cf9610e1586751fec0f46d0a8d4fa040f0e6d4ac4ad93a338e43
    spec:
      securityContext:
        runAsUser: 10000
        fsGroup: 10000
      automountServiceAccountToken: false
      containers:
        - name: trivy
          image: goharbor/trivy-adapter-photon:v2.6.2
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
          ports:
            - name: api-server
              containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /home/scanner/.cache
              subPath:
              readOnly: false
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /probe/healthy
              port: api-server
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /probe/ready
              port: api-server
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 512Mi
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          heritage: Helm
          release: registry-main
          chart: harbor
          app: "harbor"
        annotations:
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: "10Gi"
